# filetree_viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
filetree_viewer/: __init__.py  __main__.py  cli.py  core.py  utils.py
filetree_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
