pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filetree_viewer"
version = "1.0.0"
description = "A Python package to display complete file structure from the current directory schema."
authors = [
    { name = "S Shibinsha", email = "shibin24888@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["filesystem", "directory", "tree", "CLI", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
filetree_viewer = "filetree_viewer.cli:main"
